--- a/index.html
+++ b/index.html
@@ -3,11 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bookstore</title>
+    <title>Book Store</title>
     <script src="script.js"></script>
+    <script src="scripts/library.js"></script>
+    <script src="scripts/template.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/assets.css">
+    <link rel="stylesheet" href="styles/standart.css">
 </head>
-<body>
+<body onload="init()">
     
+<header>
+    <div class="header-logo">
+        <img src="./assets/icons/book_icon.png" alt="bookicon">
+    </div>
+
+    <h1>Book Store</h1>
+</header>
+
+<main>
+<div id="book-library"></div>
+</main>
+
+<footer>
+
+</footer>
+
 </body>
 </html>
