update functions and css

--- a/index.html
+++ b/index.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Book Store</title>
+    <link rel="icon" href="./assets/icons/book_icon.png" type="image/x-icon" />
     <script src="script.js"></script>
     <script src="scripts/library.js"></script>
     <script src="scripts/template.js"></script>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="styles/assets.css">
-    <link rel="stylesheet" href="styles/standart.css">
-</head>
-<body onload="init()">
-    
-<header>
-    <div class="header-logo">
-        <img src="./assets/icons/book_icon.png" alt="bookicon">
-    </div>
+    <script src="scripts/localstorage.js"></script>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles/assets.css" />
+    <link rel="stylesheet" href="styles/standart.css" />
+  </head>
+  <body onload="init()">
+    <header>
+      <div class="header-logo">
+        <img src="./assets/icons/book_icon.png" alt="bookicon" />
+      </div>
 
-    <h1>Book Store</h1>
-</header>
+      <h1>Book Store</h1>
+    </header>
 
-<main>
-<div id="book-library"></div>
-</main>
+    <main>
+      <div id="book-library"></div>
+    </main>
 
-<footer>
-
-</footer>
-
-</body>
+    <footer></footer>
+  </body>
 </html>
